--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.6",
+    "redux-form-validators": "^3.3.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
