--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-reactive-form": "^1.0.32",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^6.0.8",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
@@ -25,6 +27,7 @@
     "redux-form-validators": "^3.3.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.1",
     "semantic-ui-react-form-validator": "^1.0.2"
