--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.5.2",
     "cogo-toast": "^4.2.3",
     "connected-react-router": "^6.8.0",
+    "eslint-config-prettier": "^6.14.0",
     "history": "^5.0.0",
     "node-sass": "^4.14.1",
+    "prettier-eslint": "^11.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -59,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.1.2"
   }
 }
