--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.3",
     "react-stepper-horizontal": "^1.0.11",
+    "react-time-picker": "^4.0.1",
     "react-toastify": "^6.0.8",
     "react-validation": "^3.0.7",
     "redux": "^4.0.5",
