--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connected-react-router": "^6.8.0",
     "eslint-config-prettier": "^6.14.0",
     "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "prettier-eslint": "^11.0.0",
     "react": "^16.13.1",
