--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cogo-toast": "^4.2.3",
     "connected-react-router": "^6.8.0",
     "eslint-config-prettier": "^6.14.0",
+    "firebase": "^8.2.0",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
