--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://malax.azurewebsites.net/api
+REACT_APP_API_URL=https://malax-dev-api.azurewebsites.net/api
 REACT_APP_IMAGE_URL=http://64.202.184.112:6500/
