--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,9 @@
 REACT_APP_API_URL=https://malax-dev-api.azurewebsites.net/api
 REACT_APP_IMAGE_URL=http://64.202.184.112:6500/
+REACT_APP_API_KEY=jF/TXmD5cJYgcVrPI9xZUPygqJ8jZ6V6WiQHrNu7UxUeOmg4ssOvXw==
+REACT_APP_FIREBASE_APIKEY="AIzaSyBLjBP3mUkvggeHVBRrXVIWaJf9CppATfI"
+REACT_APP_FIREBASE_AUTHDOMAIN="mydemo-863e7.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECTID="mydemo-863e7"
+REACT_APP_FIREBASE_STORAGEBUCKET="mydemo-863e7.appspot.com"
+REACT_APP_FIREBASE_MESSAGINGSENDERID="1086416963358"
+REACT_APP_FIREBASE_APPID="1:1086416963358:web:2559ad59a980c3503c6b0f"
